DD-52: Fix liquidation event history item overflow and formatting
- Fix overflow on some breakpoints
- Add whitespace between text and DAI value
- Use 2 decimals for USD/DAI

--- a/public/css/_cp-cup-history.scss
+++ b/public/css/_cp-cup-history.scss
@@ -21,9 +21,12 @@
     }
   }
   .history-details {
-    float: left;
+    position: relative;
+    top: 6px;
+    @include respond-to(xl) {
+      top: 2px;
+    }
     line-height: 1.5;
-    margin-top: 2px;
   }
   .history-date {
     font-size: 0.85em;
